estetic-styles.css
/* ... */
    /* мобильная версия */
    @media (min-width: 320px) and (max-width: 539px) {
        .hide-tablet-mobile {
            display: none
        }
        .tablet-vertical-lady{
            height: 300px;
        }
        .white-header {
            width: 90%;
            height: 42px;
            margin: 20px;
            background: white;
            box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25), -2px 0 4px rgba(0, 0, 0, 0.25);
        }
        .mobile-div-mgn {
            margin-top: 10%;
        }
        .burger {
            width: 28px;
            height: 28px;
            background: url("pictures/burger.png");
            background-repeat: no-repeat;
            background-size: contain;
            border: none;
            margin-top: 7px;
        }
        .burger-menu {
            width: 200px;
            margin-top: 11px;
            margin-left: 24px;
        }
        .burger-links{
            font-size: 14px;
        }
        .part-of-menu {
            margin: 7px;
        }
        .mobile-number {
            font-family: Gabriela;
            font-size: 12px;
            line-height: 14px;
            margin-top: 14px;
        }
        .mobile-menu {
            display: flex;
            justify-content: space-around;
        }
        .socials-mobile {
            display: flex;
            margin-top: 5px;
        }
        .text-Nata-mobile {
            font-size: 32px;
            margin: -48px 0 -17px -15px;
        }
        .text-estetic-mobile {
            font-size: 12px;
            line-height: 15px;
            padding-top: 36px;
        }
        .text-cosmetology-mobile {
            font-size: 13px;
            line-height: 10px;
        }
        .button-style-mobile {
            width: 96px;
            height: 21px;
            padding: 0;
        }
        .p-mobile {
            font-size: 11px;
        }
        .button-style-tablet {
            width: 96px;
            height: 31px;
            padding: 0;
        }
        .p-tablet {
            font-size: 14px;
            line-height: 20px;
        }
        .margin-p-services {
            font-size: 14px;
            line-height: 15px;
        }
        .white-rectangle {
            width: 200px;
            height: 220px;
        }
        .invisible-rectangle {
            width: 200px;
            height: 220px;
        }
        .padding-advantages {
            width: 100px;
        }
        .reviews {
            margin-right:0;
        }
        .margin-advantages {
            width: 100px;
        }
        .margin-p {
            font-size: 16px;
        }
        .header {
            font-size: 50px;
        }
        .padding-h2 {
            font-size: 50px;
        }
        .margin-sing-up-small {
            margin-bottom: 42px;
        }
        .insta-footer {
            width: 34px;
            height: 34px;
        }
        .whatsapp-footer {
            width: 34px;
            height: 34px;
        }
        .vk-footer {
            width: 34px;
            height: 34px;
        }
    }

